# likert_dualresponse

./: .gitignore  .nojekyll  README.md  _quarto.yml  index-preview.html  index.docx  index.embed.ipynb  index.html  index.out.ipynb  index.qmd  index.tex  index.xml  latex_commands.qmd  preamble.tex  pyproject.toml  references.bib
.github/workflows/: compile_draft  compile_draft.yml  publish.yml
_freeze/index/execute-results/: docx.json  html.json  tex.json  xml.json
_tex/: index.tex  references.bib
draft/: main.tex  preamble.tex  refs.bib
notebooks/: _OrderedLogisticRegression.ipynb  data-screening-preview.html  data-screening.embed.ipynb  data-screening.out.ipynb  example_discretechoice-preview.html  example_discretechoice.ipynb  example_discretechoice.out.ipynb  example_likert-preview.html  example_likert.ipynb  example_likert.out.ipynb  likert_dualresponse-preview.html  likert_dualresponse.ipynb  likert_dualresponse.out.ipynb  mnl_standard.qmd  multinomial_logit.ipynb  pymc_sandbox.ipynb  simul_sandbox.ipynb  temp-preview.html  temp.embed.ipynb  temp.out.ipynb
sections/: analysis-preview.html  analysis.embed.ipynb  analysis.out.ipynb  analysis.qmd  conclusion-preview.html  conclusion.embed.ipynb  conclusion.out.ipynb  conclusion.qmd  discussion-preview.html  discussion.embed.ipynb  discussion.out.ipynb  discussion.qmd  intro-preview.html  intro.embed.ipynb  intro.out.ipynb  intro.qmd  model-preview.html  model.embed.ipynb  model.html  model.out.ipynb  model.qmd  simstudy-preview.html  simstudy.embed.ipynb  simstudy.out.ipynb  simstudy.qmd
(+2 files in other folders)
