[tool.poetry]
name = "likert-dualresponse"
version = "0.1.0"
description = ""
authors = ["Geoff Zheng <geoff.zheng@nyu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.6"
pymc = "^5.0.0"
seaborn = "^0.13.2"
numpyro = "^0.15.0"
arviz = "^0.18.0"
statsmodels = "^0.14.2"
graphviz = "^0.20.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
